# riding-api

./: .gitignore  README.md  local.yml  manage.py  pyproject.toml  requirements.txt
.envs/.local/: .django
.envs/local/: .django  .postgis
.github/workflows/: django_test.yml
apps/drivers/: admin.py  exceptions.py  models.py  service.py  urls.py
apps/drivers/api/: views.py
apps/drivers/migrations/: 0001_initial.py  0002_alter_drivers_is_active_vehicles.py  0003_alter_vehicles_driver_alter_vehicles_year.py
apps/drivers/tests/: core.py  test_drivers_views.py  test_services.py  test_vehicle_manager.py  test_vehicle_serializer.py  test_vehicles_views.py  test_views.py
apps/travels/: admin.py  apps.py  exceptions.py  filters.py  models.py  permissions.py  services.py  tasks.py  urls.py  utils.py
apps/travels/migrations/: 0001_initial.py  0002_requesttravel_status.py  0003_alter_requesttravel_driver.py  0004_alter_requesttravel_created_time.py  0005_remove_requesttravel_driver_and_more.py  0006_requesttravel_expires_alter_requesttravel_user_and_more.py  0007_alter_requesttravel_expires_and_more.py  0008_travel_request_travel.py  0009_remove_travel_prevent_self_traveling.py  0010_alter_travel_driver_alter_travel_request_travel_and_more.py  0011_travel_vehicle.py  0012_confirmationtravel_check_driver_and_more.py  0013_alter_confirmationtravel_driver_and_more.py  (+1 more)
apps/users/: admin.py  exceptions.py  models.py  oauth2_validator.py  security.py  services.py  tasks.py  urls.py
riding/: asgi.py  celery.py  urls.py  wsgi.py
riding/settings/: base.py  local.py
(+27 files in other folders)
